final crud endpoints